--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Social Betting - beat your friends</title>
+    <title>Social Betting - Beat Your Friends</title>
     <!-- change this up! http://www.bootstrapcdn.com/bootswatch/ -->
     <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/cosmo/bootstrap.min.css" type="text/css" rel="stylesheet"/>
   </head>
 
   <body>
     <div id="app"></div>
+    
     <script src="client.min.js"></script>
   </body>
 </html>
