Added template with navbar

--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Social Betting - Beat Your Friends</title>
-    <!-- change this up! http://www.bootstrapcdn.com/bootswatch/ -->
-    <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/cosmo/bootstrap.min.css" type="text/css" rel="stylesheet"/>
-  </head>
 
-  <body>
-    <div id="app"></div>
-    
-    <script src="client.min.js"></script>
-  </body>
+<head>
+  <meta charset="utf-8">
+  <title>Social Betting - Beat Your Friends</title>
+
+  <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.js" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+    crossorigin="anonymous"></script>
+
+  <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/cosmo/bootstrap.min.css" type="text/css" rel="stylesheet" />
+  <link href="./css/main.css" rel="stylesheet">
+</head>
+
+
+<body>
+  <div id="app" />
+  <script src="client.min.js"></script>
+</body>
+
 </html>
