--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,16 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <meta name="author" content="Uzi Cohen">
+  <meta name="description" content="Social Betting Front End React">
   <title>Social Betting - Beat Your Friends</title>
 
-  <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.js" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-    crossorigin="anonymous"></script>
-
-  <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/cosmo/bootstrap.min.css" type="text/css" rel="stylesheet" />
-  <link href="./css/main.css" rel="stylesheet">
+  <script src="./external/jquery.js" crossorigin="anonymous"></script>
+  <script src="./external/bootstrap/js/bootstrap.min.js" crossorigin="anonymous"></script>
+  <link href="./external/bootstrap/css/bootstrap.min.css" type="text/css" rel="stylesheet" />
+  <link href="./css/index.css" rel="stylesheet">
+  <link href="./css/bootstrap-custom.css" rel="stylesheet">
 </head>
 
 
