Fixed tour nav issues

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   <meta name="description" content="Social Betting Front End React">
   <title>Social Betting - Beat Your Friends</title>
 
+  <link rel="shortcut icon" href="./images/general/favicon.ico" type="image/x-icon" />
   <script src="./external/jquery.js" crossorigin="anonymous"></script>
   <script src="./external/bootstrap/js/bootstrap.min.js" crossorigin="anonymous"></script>
   <link href="./external/bootstrap/css/bootstrap.min.css" type="text/css" rel="stylesheet" />
