--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
 
 <body>
   <div id="app" />
-  <script src="client.min.js"></script>
+  <script src="../../social-betting-be/src/main/resources/static/built/client.min.js"></script>
 </body>
 
 </html>
